--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   firebase_core: ^1.10.6
   firebase_auth: ^3.3.4
   google_sign_in: "^4.5.1"
+  multi_select_flutter: ^4.0.0
 
   font_awesome_flutter: ^9.2.0
 
