--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   firebase_auth: ^3.3.4
   google_sign_in: "^4.5.1"
   multi_select_flutter: ^4.0.0
+  http: ^0.13.4
+  provider: ^6.0.2
 
   font_awesome_flutter: ^9.2.0
 
