--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,8 +38,10 @@ dependencies:
   firebase_auth: ^3.3.4
   google_sign_in: "^4.5.1"
   multi_select_flutter: ^4.0.0
-
   font_awesome_flutter: ^9.2.0
+  firebase_storage: ^10.2.4
+  image_picker: ^0.8.4+4
+  cloud_firestore: ^3.1.5
 
 dev_dependencies:
   flutter_test:
