--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   multi_select_flutter: ^4.0.0
   http: ^0.13.4
   provider: ^6.0.2
+  intl: ^0.17.0
 
   font_awesome_flutter: ^9.2.0
 
