--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -72,6 +72,7 @@ flutter:
   assets:
     - assets/images/main-img.png
     - assets/images/sign-in.png
+    - assets/images/profileImage01.jpg
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
