--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   http: ^0.13.4
   provider: ^6.0.2
   intl: ^0.17.0
+  flutter_icons: ^1.1.0
+  persistent_bottom_nav_bar: ^4.0.2
 
   font_awesome_flutter: ^9.2.0
   firebase_storage: ^10.2.4
