--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   intl: ^0.17.0
   flutter_icons: ^1.1.0
   persistent_bottom_nav_bar: ^4.0.2
+  flutter_staggered_grid_view: ^0.6.0
 
   font_awesome_flutter: ^9.2.0
   firebase_storage: ^10.2.4
@@ -90,12 +91,11 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
+  fonts:
+    - family: Rancho
+      fonts:
+        - asset: assets/fonts/Rancho-Regular.ttf
+        
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
