--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,7 +43,7 @@ dependencies:
   intl: ^0.17.0
   flutter_icons: ^1.1.0
   persistent_bottom_nav_bar: ^4.0.2
-  
+  shared_preferences: ^2.0.12
 
   font_awesome_flutter: ^9.2.0
   firebase_storage: ^10.2.4
